add healtcheck endpoint
